group='com.freiheit.fuava'
allprojects {
    apply plugin: 'idea'
    apply plugin: 'eclipse'
}

idea.project.languageLevel = '1.8'

subprojects {

    version='0.9.5-SNAPSHOT'


    repositories {
        mavenLocal()
        mavenCentral()
    }

    apply plugin: 'java'
    apply plugin: 'eclipse'
    apply plugin: 'checkstyle'
    apply plugin: 'findbugs'
    apply plugin: 'maven-publish'

    group = 'com.freiheit.fuava'

    sourceCompatibility = JavaVersion.VERSION_1_8

    dependencies {
        testCompile 'org.testng:testng:6.9.4'
        testCompile 'org.apache.sshd:sshd-sftp:2.3.0'
    }

    checkstyle {
        configFile = file( "${rootProject.projectDir}/etc/checkstyle/checkstyle_checks.xml" )
        configProperties = [ 'basedir': "${rootProject.projectDir}/etc/" ]
        toolVersion = '6.5'
    }

    findbugs {
        toolVersion = "3.0.1"
        reportsDir = file("${project.buildDir}/findbugsReports")
        effort = "max"
        reportLevel = "high"
        excludeFilter = file("${rootProject.projectDir}/etc/findbugs/exclude-filter.xml")
    }

    sourceCompatibility = JavaVersion.VERSION_1_8

    dependencies {
        testCompile 'org.testng:testng:6.9.4'
    }

    test {
        useTestNG()
    }
}

